Upgrade bn-extension to JDK17 and 4.12